# tonic-ms-example

./: .env  Cargo.toml  Dockerfile  diesel.toml
proto/: items.proto  movie.proto  user.proto
service/: .env
service/items/: Cargo.toml  build.rs
service/items/migrations/2023-11-24-185141_items_table/: up.sql
service/items/src/: main.rs
service/items/src/items/: entity.rs  interactor.rs  mapper.rs  mod.rs  repository.rs  service.rs
service/user/: Cargo.toml  build.rs
service/user/migrations/2023-11-21-223757_user_table/: up.sql
service/user/migrations/2023-11-21-224447_init_data/: up.sql
service/user/src/: main.rs
service/user/src/user/: entity.rs  interactor.rs  mapper.rs  repository.rs  service.rs
src/: main.rs
src/movie/: entity.rs  interactor.rs  mapper.rs  mod.rs  repository.rs  service.rs
