[package]
name = "movies-back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.3"
prost-types = "0.12.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.10.2"
tonic-health = "0.10.2"
tonic-web = "0.10.2"
diesel = { version = "2.1.3", features = ["mysql", "r2d2", "uuid", "chrono", "numeric"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
chrono = { version = "0.4", features = ["serde"] }

schema = { path = "./library/schema"}
db = { path = "./library/db" }

[build-dependencies]
tonic-build = "0.10.2"
