[package]
name = "items"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schema = { path = "../../library/schema"}
configuration = { path = "../../library/configuration" }
db = { path = "../../library/db" }
error = { path = "../../library/error" }
status = { path = "../../library/status" }
helper ={ path = "../../library/helper"}

diesel = { version = "2.1.3", features = ["mysql", "r2d2", "uuid", "chrono", "numeric"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

prost = "0.12.1"
prost-types = "0.12.1"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.10.2"
tonic-health = "0.10.2"
tonic-web = "0.10.2"
rust_decimal = {version ="1.29.1", features = ["serde-with-str", "db-diesel-mysql", "db-diesel2-mysql"] }
rust_decimal_macros = "1.29.1"
chrono = { version = "0.4", features = ["serde"] }


[build-dependencies]
protoc-bin-vendored = "3.0.0"
tonic-build = "0.10.2"